--- a/index.html
+++ b/index.html
@@ -1,61 +1,91 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Specialisti in Social Engineering e Cyber Security</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>PROVA - Sicurezza e Social Engineering</title>
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Specialisti in Social Engineering e Cyber Security</h1>
-    <p>Simulazioni, formazione e test personalizzati per i nostri clienti</p>
-  </header>
+<header>
+  <h1>🛡️ Proteggi la tua azienda dalle minacce umane</h1>
+  <p>Specialisti in Social Engineering e Cyber Security: simulazioni e formazione personalizzata.</p>
+</header>
 
-  <nav>
+<nav>
+  <ul>
+    <li><a href="#chi-siamo">Chi siamo</a></li>
+    <li><a href="#social-engineering">Social Engineering Concept</a></li>
+    <li><a href="#servizi">Servizi di Social Engineering</a></li>
+    <li><a href="#training">Security Training</a></li>
+    <li><a href="#notizie">📰 Notizie dal nostro team</a></li>
+    <li><a href="#contatti">Contattaci</a></li>
+  </ul>
+</nav>
+
+<main>
+  <section id="chi-siamo">
+    <h2>Chi siamo</h2>
+    <p>
+      PROVA è un team di esperti in social engineering, pronto a mettere alla prova la sicurezza umana della tua azienda con attacchi simulati e formazione mirata. La nostra missione è proteggere la tua organizzazione dai rischi legati all'ingegneria sociale, la minaccia più insidiosa e meno tangibile.
+    </p>
+  </section>
+
+  <section id="social-engineering">
+    <h2>Social Engineering Concept</h2>
+    <p>Scopri cosa si nasconde dietro alle tattiche più sofisticate di ingegneria sociale e come difendersi efficacemente.</p>
+  </section>
+
+  <section id="servizi">
+    <h2>Servizi di Social Engineering</h2>
     <ul>
-      <li><a href="#servizi">Servizi</a></li>
-      <li><a href="#chi-siamo">Chi siamo</a></li>
-      <li><a href="#contatti">Contatti</a></li>
+      <li><span>📧</span> Phishing simulato: Test di email ingannevoli per valutare la resilienza del personale.</li>
+      <li><span>📞</span> Vishing: Simulazioni di telefonate fraudolente per misurare la risposta del team.</li>
+      <li><span>🎭</span> Pretexting: Creazione di scenari falsi per testare l’accesso alle informazioni riservate.</li>
+      <li><span>🏢</span> Accesso fisico simulato: Verifica delle vulnerabilità fisiche e degli accessi non autorizzati.</li>
+      <li><span>🎓</span> Formazione personalizzata: Workshop e training per sensibilizzare e proteggere il personale.</li>
     </ul>
-  </nav>
+  </section>
 
-  <main>
-    <section id="servizi">
-      <h2>I nostri servizi</h2>
-      <ul class="flex-list">
-        <li><span class="emoji">📧</span>Phishing simulato: Test di email ingannevoli per valutare la resilienza del personale.</li>
-        <li><span class="emoji">📞</span>Vishing: Simulazioni di telefonate fraudolente per misurare la risposta del team.</li>
-        <li><span class="emoji">🎭</span>Pretexting: Creazione di scenari falsi per testare l’accesso alle informazioni riservate.</li>
-        <li><span class="emoji">🏢</span>Accesso fisico simulato: Verifica delle vulnerabilità fisiche e degli accessi non autorizzati.</li>
-        <li><span class="emoji">🎓</span>Formazione personalizzata: Workshop e training per sensibilizzare e proteggere il personale.</li>
-      </ul>
-    </section>
+  <section id="training">
+    <h2>Security Training</h2>
+    <p>Offriamo corsi e workshop pratici per migliorare la consapevolezza e la preparazione del tuo team.</p>
+  </section>
 
-    <section id="chi-siamo">
-      <h2>Chi siamo</h2>
-      <p>Siamo un team di esperti dedicati a migliorare la sicurezza informatica delle aziende attraverso test di social engineering personalizzati e formazione mirata.</p>
-    </section>
+  <section id="notizie">
+    <h2>📰 Notizie dal nostro team</h2>
 
-    <section id="contatti">
-      <h2>Contatti</h2>
-      <form>
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required />
+    <article>
+      <h3>🛡️ Difendersi dalla tattica ClickFix</h3>
+      <p>
+        <a href="githubnotiziaclicfix.html" target="_blank" rel="noopener noreferrer">
+          Leggi l'articolo completo sulla tattica ClickFix →
+        </a>
+      </p>
+      <img src="path-to-your-image.jpg" alt="Immagine tattica ClickFix" />
+    </article>
+  </section>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
+  <section id="contatti">
+    <h2>Contattaci</h2>
+    <form>
+      <label for="nome">Nome</label>
+      <input type="text" id="nome" name="nome" placeholder="Il tuo nome" required />
 
-        <label for="messaggio">Messaggio:</label>
-        <textarea id="messaggio" name="messaggio" rows="5" required></textarea>
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" placeholder="La tua email" required />
 
-        <button type="submit">Invia</button>
-      </form>
-    </section>
-  </main>
+      <label for="messaggio">Messaggio</label>
+      <textarea id="messaggio" name="messaggio" rows="4" placeholder="Scrivi qui il tuo messaggio" required></textarea>
 
-  <footer>
-    <p>© 2025 Social Engineering & Cyber Security. Tutti i diritti riservati.</p>
-  </footer>
+      <button type="submit">Invia messaggio</button>
+    </form>
+    <p>Oppure scrivici a: <a href="mailto:info@prova.it">info@prova.it</a></p>
+  </section>
+</main>
+
+<footer>
+  <p>© 2025 PROVA. Tutti i diritti riservati.</p>
+</footer>
 </body>
 </html>
