--- a/index.html
+++ b/index.html
@@ -50,14 +50,17 @@
   <section id="notizie">
     <h2>📰 Notizie dal nostro team</h2>
 
-    <article>
-      <h3>🛡️ Difendersi dalla tattica ClickFix</h3>
-      <p>
-        <a href="githubnotiziaclicfix.html" target="_blank" rel="noopener noreferrer">
-          Leggi l'articolo completo sulla tattica ClickFix →
-        </a>
-      </p>
-      <img src="path-to-your-image.jpg" alt="Immagine tattica ClickFix" />
+    <article class="notizia-clickfix">
+      <img src="path-to-your-image.jpg" alt="Tattica ClickFix" />
+      <div>
+        <h3>🛡️ Difendersi dalla tattica ClickFix</h3>
+        <p>Il post illustra ClickFix, la recente tattica di Social Engineering diffusa nell’arco del 2024, con un focus su tutte le varianti osservate nelle campagne che ne facevano uso e le potenziali tecniche di difesa da mettere in atto per proteggere i dispositivi utilizzati da utenti meno esperti.</p>
+        <p>
+          <a href="githubnotiziaclicfix.html" target="_blank" rel="noopener noreferrer">
+            Leggi l'articolo completo sulla tattica ClickFix →
+          </a>
+        </p>
+      </div>
     </article>
   </section>
 
