--- a/githubnotiziaclicfix.html
+++ b/githubnotiziaclicfix.html
@@ -22,9 +22,12 @@
     <ul>
       <li>
         <strong>Finti CAPTCHA:</strong> l’utente sarà portato naturalmente a cliccare sul CAPTCHA che copierà a sua insaputa un codice malevolo negli appunti. Successivamente gli verranno mostrate delle finte istruzioni per risolverlo, inducendolo ad incollare il codice nascosto ed eseguirlo premendo invio.
-        <br />
-        <img src="https://raw.githubusercontent.com/nimeo1988/provasite/main/img.png" alt="Esempio tattica ClickFix" style="max-width:100%; height:auto; margin: 1rem 0;" />
       </li>
+    </ul>
+
+    <img src="img.png" alt="Esempio tattica ClickFix" style="max-width:100%; height:auto; margin: 1rem 0;" />
+
+    <ul>
       <li><strong>Finti messaggi di errore:</strong> le pagine o documenti conterranno finti file Office, finti link a riunioni dalle principali piattaforme (Meet, Zoom, Teams) e siti noti con presunti errori ed un pulsante da cliccare per risolverli. In maniera simile a quanto avviene per il finto CAPTCHA, al click viene copiato un codice ad insaputa della vittima e contestualmente vengono mostrate delle istruzioni da seguire. Alcune varianti della campagna non contengono il bottone da cliccare ma mostrano direttamente il codice da copiare con le relative istruzioni.</li>
     </ul>
 
