--- a/githubnotiziaclicfix.html
+++ b/githubnotiziaclicfix.html
@@ -5,6 +5,51 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Articolo ClickFix - PROVA</title>
 <link rel="stylesheet" href="style.css" />
+<style>
+  /* Stile base per migliorare leggibilità e spaziatura */
+  body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    max-width: 800px;
+    margin: 2rem auto;
+    padding: 0 1rem;
+    color: #222;
+    background: #f9faff;
+  }
+  h1 {
+    text-align: center;
+    margin-bottom: 2rem;
+    color: #004080;
+  }
+  p {
+    margin-bottom: 1rem;
+  }
+  ul, ol {
+    margin-left: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+  li {
+    margin-bottom: 0.8rem;
+  }
+  pre {
+    background: #eaeaea;
+    padding: 1rem;
+    border-radius: 4px;
+    overflow-x: auto;
+  }
+  img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    margin: 1rem 0 2rem 0;
+  }
+  footer {
+    text-align: center;
+    font-size: 0.9rem;
+    color: #666;
+    margin: 3rem 0 1rem 0;
+  }
+</style>
 </head>
 <body>
 <header>
@@ -25,7 +70,7 @@
       </li>
     </ul>
 
-    <img src="img.png" alt="Esempio tattica ClickFix" style="max-width:100%; height:auto; margin: 1rem 0;" />
+    <img src="img.png" alt="Esempio tattica ClickFix" />
 
     <ul>
       <li><strong>Finti messaggi di errore:</strong> le pagine o documenti conterranno finti file Office, finti link a riunioni dalle principali piattaforme (Meet, Zoom, Teams) e siti noti con presunti errori ed un pulsante da cliccare per risolverli. In maniera simile a quanto avviene per il finto CAPTCHA, al click viene copiato un codice ad insaputa della vittima e contestualmente vengono mostrate delle istruzioni da seguire. Alcune varianti della campagna non contengono il bottone da cliccare ma mostrano direttamente il codice da copiare con le relative istruzioni.</li>
