--- a/index.html
+++ b/index.html
@@ -47,22 +47,24 @@
     <p>Offriamo corsi e workshop pratici per migliorare la consapevolezza e la preparazione del tuo team.</p>
   </section>
 
-  <section id="notizie">
-    <h2>📰 Notizie dal nostro team</h2>
-
-    <article class="notizia-clickfix">
+<section id="notizie">
+  <h2>📰 Notizie dal nostro team</h2>
+  <div class="cards-container">
+    <article class="card">
       <img src="path-to-your-image.jpg" alt="Tattica ClickFix" />
-      <div>
-        <h3>🛡️ Difendersi dalla tattica ClickFix</h3>
-        <p>Il post illustra ClickFix, la recente tattica di Social Engineering diffusa nell’arco del 2024, con un focus su tutte le varianti osservate nelle campagne che ne facevano uso e le potenziali tecniche di difesa da mettere in atto per proteggere i dispositivi utilizzati da utenti meno esperti.</p>
-        <p>
-          <a href="githubnotiziaclicfix.html" target="_blank" rel="noopener noreferrer">
-            Leggi l'articolo completo sulla tattica ClickFix →
-          </a>
-        </p>
-      </div>
+      <h3>🛡️ Difendersi dalla tattica ClickFix</h3>
+      <p>Il post illustra ClickFix, la recente tattica di Social Engineering diffusa nell’arco del 2024, con un focus su tutte le varianti osservate nelle campagne che ne facevano uso e le potenziali tecniche di difesa da mettere in atto per proteggere i dispositivi utilizzati da utenti meno esperti.</p>
+      <p>
+        <a href="githubnotiziaclicfix.html" target="_blank" rel="noopener noreferrer">
+          Leggi l'articolo completo sulla tattica ClickFix →
+        </a>
+      </p>
     </article>
-  </section>
+
+    <!-- Puoi aggiungere altre card qui -->
+  </div>
+</section>
+
 
   <section id="contatti">
     <h2>Contattaci</h2>
