--- a/index.html
+++ b/index.html
@@ -24,49 +24,47 @@
 </nav>
 
 <main>
-  <section id="chi-siamo">
+  <section id="chi-siamo" class="section-box">
     <h2>Chi siamo</h2>
     <p>
       PROVA è un team di esperti in social engineering, pronto a mettere alla prova la sicurezza umana della tua azienda con attacchi simulati e formazione mirata. La nostra missione è proteggere la tua organizzazione dai rischi legati all'ingegneria sociale, la minaccia più insidiosa e meno tangibile.
     </p>
   </section>
 
-  <section id="servizi">
+  <section id="servizi" class="section-box">
     <h2>Servizi di Social Engineering</h2>
     <ul>
-      <li><span>📧</span> Phishing simulato: Test di email ingannevoli per valutare la resilienza del personale.</li>
-      <li><span>📞</span> Vishing: Simulazioni di telefonate fraudolente per misurare la risposta del team.</li>
-      <li><span>🎭</span> Pretexting: Creazione di scenari falsi per testare l’accesso alle informazioni riservate.</li>
-      <li><span>🏢</span> Accesso fisico simulato: Verifica delle vulnerabilità fisiche e degli accessi non autorizzati.</li>
-      <li><span>🎓</span> Formazione personalizzata: Workshop e training per sensibilizzare e proteggere il personale.</li>
+      <li>📧 Phishing simulato: Test di email ingannevoli per valutare la resilienza del personale.</li>
+      <li>📞 Vishing: Simulazioni di telefonate fraudolente per misurare la risposta del team.</li>
+      <li>🎭 Pretexting: Creazione di scenari falsi per testare l’accesso alle informazioni riservate.</li>
+      <li>🏢 Accesso fisico simulato: Verifica delle vulnerabilità fisiche e degli accessi non autorizzati.</li>
+      <li>🎓 Formazione personalizzata: Workshop e training per sensibilizzare e proteggere il personale.</li>
     </ul>
   </section>
 
-  <section id="training">
+  <section id="training" class="section-box">
     <h2>Security Training</h2>
     <p>Offriamo corsi e workshop pratici per migliorare la consapevolezza e la preparazione del tuo team.</p>
   </section>
 
-<section id="notizie">
-  <h2>📰 Notizie dal nostro team</h2>
-  <div class="cards-container">
-    <article class="card">
+  <section id="notizie" class="section-box">
+    <h2>📰 Notizie dal nostro team</h2>
+
+    <article class="notizia-clickfix">
       <img src="path-to-your-image.jpg" alt="Tattica ClickFix" />
-      <h3>🛡️ Difendersi dalla tattica ClickFix</h3>
-      <p>Il post illustra ClickFix, la recente tattica di Social Engineering diffusa nell’arco del 2024, con un focus su tutte le varianti osservate nelle campagne che ne facevano uso e le potenziali tecniche di difesa da mettere in atto per proteggere i dispositivi utilizzati da utenti meno esperti.</p>
-      <p>
-        <a href="githubnotiziaclicfix.html" target="_blank" rel="noopener noreferrer">
-          Leggi l'articolo completo sulla tattica ClickFix →
-        </a>
-      </p>
+      <div>
+        <h3>🛡️ Difendersi dalla tattica ClickFix</h3>
+        <p>Il post illustra ClickFix, la recente tattica di Social Engineering diffusa nell’arco del 2024, con un focus su tutte le varianti osservate nelle campagne che ne facevano uso e le potenziali tecniche di difesa da mettere in atto per proteggere i dispositivi utilizzati da utenti meno esperti.</p>
+        <p>
+          <a href="githubnotiziaclicfix.html" target="_blank" rel="noopener noreferrer">
+            Leggi l'articolo completo sulla tattica ClickFix →
+          </a>
+        </p>
+      </div>
     </article>
+  </section>
 
-    <!-- Puoi aggiungere altre card qui -->
-  </div>
-</section>
-
-
-  <section id="contatti">
+  <section id="contatti" class="section-box">
     <h2>Contattaci</h2>
     <form>
       <label for="nome">Nome</label>
@@ -78,7 +76,7 @@
       <label for="messaggio">Messaggio</label>
       <textarea id="messaggio" name="messaggio" rows="4" placeholder="Scrivi qui il tuo messaggio" required></textarea>
 
-      <button type="submit">Invia messaggio</button>
+      <button type="submit">📩 Invia messaggio</button>
     </form>
     <p>Oppure scrivici a: <a href="mailto:info@prova.it">info@prova.it</a></p>
   </section>
