--- a/index.html
+++ b/index.html
@@ -282,6 +282,19 @@ footer {
 </head>
 <body>
 <header>
+  <header style="display: flex; align-items: center; justify-content: center; gap: 10px;">
+  <!-- Logo Social Engineering -->
+  <svg width="48" height="48" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Social Engineering Logo" role="img" style="flex-shrink: 0;">
+    <circle cx="32" cy="32" r="30" fill="#667eea" />
+    <path fill="#fff" d="M20 44c0-6 24-6 24 0v4H20v-4zM18 24a14 14 0 0128 0v8H18v-8z"/>
+    <circle cx="24" cy="28" r="4" fill="#764ba2" />
+    <circle cx="40" cy="28" r="4" fill="#764ba2" />
+    <path stroke="#764ba2" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" d="M20 44c0-4 24-4 24 0" />
+  </svg>
+
+  <h1>🛡️ Proteggi la tua azienda dalle minacce umane</h1>
+</header>
+
   <h1>🛡️ Proteggi la tua azienda dalle minacce umane</h1>
   <p>Specialisti in Social Engineering e Cyber Security: simulazioni e formazione personalizzata.</p>
 </header>
