--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ footer {
 <body>
 <header>
 
-  <h1>🛡️ Proteggi la tua azienda dalle minacce umane</h1>
+  <h1>🛡Proteggi la tua azienda dalle minacce umane</h1>
 </header>
 
 <nav>
