--- a/index.html
+++ b/index.html
@@ -1,313 +1,59 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>PROVA - Sicurezza e Social Engineering</title>
-<style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  line-height: 1.6;
-  color: #333;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-  min-height: 100vh;
-}
-
-header {
-  background: rgba(255, 255, 255, 0.95);
-  backdrop-filter: blur(10px);
-  padding: 2rem;
-  text-align: center;
-  margin: 2rem;
-  border-radius: 15px;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-}
-
-header h1 {
-  color: #2c3e50;
-  font-size: 2.5rem;
-  font-weight: 700;
-}
-
-header p {
-  color: #555;
-  font-size: 1.2rem;
-  max-width: 600px;
-  margin: 0 auto;
-  margin-top: 1rem;
-  text-align: center;
-  flex-basis: 100%;
-}
-
-nav {
-  background: rgba(255, 255, 255, 0.9);
-  backdrop-filter: blur(10px);
-  margin: 2rem;
-  border-radius: 15px;
-  padding: 1rem;
-  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-}
-
-nav ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 1rem;
-  list-style: none;
-}
-
-nav li a {
-  display: block;
-  padding: 0.8rem 1.5rem;
-  background: linear-gradient(135deg, #667eea, #764ba2);
-  color: white;
-  text-decoration: none;
-  border-radius: 25px;
-  font-weight: 600;
-  transition: all 0.3s ease;
-  box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);
-}
-
-nav li a:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 6px 20px rgba(102, 126, 234, 0.4);
-  background: linear-gradient(135deg, #764ba2, #667eea);
-}
-
-main {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 2rem;
-}
-
-.section-box {
-  background: rgba(255, 255, 255, 0.95);
-  backdrop-filter: blur(10px);
-  margin: 2rem 0;
-  padding: 2.5rem;
-  border-radius: 20px;
-  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  transition: all 0.3s ease;
-  position: relative;
-  overflow: hidden;
-}
-
-.section-box::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 4px;
-  background: linear-gradient(90deg, #667eea, #764ba2);
-  border-radius: 20px 20px 0 0;
-}
-
-.section-box:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
-}
-
-.section-box h2 {
-  color: #2c3e50;
-  font-size: 2rem;
-  margin-bottom: 1.5rem;
-  font-weight: 700;
-  border-bottom: 3px solid #667eea;
-  padding-bottom: 0.5rem;
-  display: inline-block;
-}
-
-.section-box p {
-  color: #555;
-  font-size: 1.1rem;
-  margin-bottom: 1rem;
-  line-height: 1.8;
-}
-
-.section-box ul {
-  list-style: none;
-  padding-left: 0;
-}
-
-.section-box ul li {
-  background: rgba(102, 126, 234, 0.1);
-  margin: 0.8rem 0;
-  padding: 1rem;
-  border-radius: 10px;
-  border-left: 4px solid #667eea;
-  font-size: 1.1rem;
-  transition: all 0.3s ease;
-}
-
-.section-box ul li:hover {
-  background: rgba(102, 126, 234, 0.2);
-  transform: translateX(5px);
-}
-
-.notizia-clickfix {
-  display: flex;
-  gap: 2rem;
-  align-items: flex-start;
-  background: rgba(102, 126, 234, 0.05);
-  padding: 2rem;
-  border-radius: 15px;
-  border: 1px solid rgba(102, 126, 234, 0.2);
-  margin-top: 1rem;
-}
-
-.notizia-clickfix img {
-  width: 150px;
-  height: 150px;
-  object-fit: cover;
-  border-radius: 10px;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-}
-
-.notizia-clickfix h3 {
-  color: #2c3e50;
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-}
-
-.notizia-clickfix a {
-  color: #667eea;
-  text-decoration: none;
-  font-weight: 600;
-  transition: color 0.3s ease;
-}
-
-.notizia-clickfix a:hover {
-  color: #764ba2;
-  text-decoration: underline;
-}
-
-form {
-  display: grid;
-  gap: 1.5rem;
-  max-width: 600px;
-}
-
-form label {
-  font-weight: 600;
-  color: #2c3e50;
-  font-size: 1.1rem;
-}
-
-form input,
-form textarea {
-  padding: 1rem;
-  border: 2px solid rgba(102, 126, 234, 0.3);
-  border-radius: 10px;
-  font-size: 1rem;
-  transition: all 0.3s ease;
-  background: rgba(255, 255, 255, 0.8);
-}
-
-form input:focus,
-form textarea:focus {
-  outline: none;
-  border-color: #667eea;
-  box-shadow: 0 0 10px rgba(102, 126, 234, 0.3);
-  background: white;
-}
-
-form button {
-  padding: 1rem 2rem;
-  background: linear-gradient(135deg, #667eea, #764ba2);
-  color: white;
-  border: none;
-  border-radius: 25px;
-  font-size: 1.1rem;
-  font-weight: 600;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0 5px 15px rgba(102, 126, 234, 0.3);
-}
-
-form button:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 8px 20px rgba(102, 126, 234, 0.4);
-  background: linear-gradient(135deg, #764ba2, #667eea);
-}
-
-footer {
-  background: rgba(44, 62, 80, 0.9);
-  backdrop-filter: blur(10px);
-  color: white;
-  text-align: center;
-  padding: 2rem;
-  margin: 2rem;
-  border-radius: 15px;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-}
-
-@media (max-width: 768px) {
-  header, nav, main, footer {
-    margin: 1rem;
-  }
-  
-  header {
-    flex-direction: column;
-  }
-
-  header h1 {
-    font-size: 2rem;
-  }
-  
-  nav ul {
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .section-box {
-    padding: 1.5rem;
-  }
-  
-  .notizia-clickfix {
-    flex-direction: column;
-    gap: 1rem;
-  }
-  
-  .notizia-clickfix img {
-    width: 100%;
-    max-width: 300px;
-    align-self: center;
-  }
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Social Engineering & Notizie</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f9faff;
+      margin: 0;
+      padding: 2rem;
+      color: #222;
+      max-width: 900px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    h1, h2 {
+      color: #004080;
+    }
+    p {
+      line-height: 1.6;
+    }
+    ul, ol {
+      margin-left: 1.5rem;
+    }
+    ul li, ol li {
+      margin-bottom: 0.8rem;
+    }
+    pre {
+      background: #eaeaea;
+      padding: 1rem;
+      border-radius: 4px;
+      overflow-x: auto;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      margin: 1rem 0 2rem 0;
+      display: block;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #666;
+      margin-top: 3rem;
+    }
+    section {
+      margin-bottom: 3rem;
+    }
+  </style>
 </head>
 <body>
-<header>
 
-  <h1>🛡Proteggi la tua azienda dalle minacce umane</h1>
-</header>
-
-<nav>
-  <ul>
-    <li><a href="#chi-siamo">Chi siamo</a></li>
-    <li><a href="#servizi">Servizi di Social Engineering</a></li>
-    <li><a href="#notizie">📰 Notizie dal nostro team</a></li>
-    <li><a href="#contatti">Contatti</a></li>
-  </ul>
-</nav>
-
-<main>
-  <section id="chi-siamo" class="section-box">
-    <h2>Social Engineering Concept</h2>
+  <section>
+    <h1>Social Engineering Concept</h1>
     <p>
       Il Social Engineering rappresenta l'arte di manipolare le persone per ottenere informazioni confidenziali o accesso a sistemi protetti. Questa tecnica sfrutta la psicologia umana piuttosto che le vulnerabilità tecniche, rendendola una delle minacce più insidiose nel panorama della cybersecurity.
     </p>
@@ -316,47 +62,62 @@ footer {
     </p>
   </section>
 
-  <section id="servizi" class="section-box">
-    <h2>Servizi di Social Engineering</h2>
-    <ul>
-      <li>Audit di sicurezza umana</li>
-      <li>Formazione personalizzata per il personale</li>
-      <li>Simulazioni di attacchi reali</li>
-      <li>Consulenza sulla prevenzione e mitigazione</li>
-    </ul>
-  </section>
-
-  <section id="notizie" class="section-box">
+  <section>
     <h2>📰 Notizie dal nostro team</h2>
-    <article class="notizia-clickfix">
-      <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=150&q=80" alt="Cybersecurity" />
-      <div>
-        <h3>Nuove tecniche di difesa contro il Social Engineering</h3>
-        <p>Il nostro team ha sviluppato metodi innovativi per contrastare efficacemente gli attacchi basati sull'ingegneria sociale.</p>
-        <a href="#">Leggi di più</a>
-      </div>
+
+    <article>
+      <p>ClickFix è una tattica di Social Engineering che ha preso piede nel corso del 2024 e consiste nell’indurre le vittime ad incollare ed eseguire comandi malevoli su dispositivi desktop Windows, tipicamente utilizzando scorciatoie con cui l’utente meno esperto potrebbe avere poca dimestichezza.</p>
+
+      <p>Una campagna ClickFix inizia attirando la vittima su una pagina controllata dall’attore malevolo o inducendola ad aprire un documento inviato in allegato che conterranno il pretesto per spingere la vittima ad eseguire i comandi.</p>
+
+      <p>Gli attaccanti utilizzano due principali pretesti:</p>
+
+      <ul>
+        <li>
+          <strong>Finti CAPTCHA:</strong> l’utente sarà portato naturalmente a cliccare sul CAPTCHA che copierà a sua insaputa un codice malevolo negli appunti. Successivamente gli verranno mostrate delle finte istruzioni per risolverlo, inducendolo ad incollare il codice nascosto ed eseguirlo premendo invio.
+        </li>
+      </ul>
+
+      <img src="img.png" alt="Esempio tattica ClickFix" />
+
+      <ul>
+        <li><strong>Finti messaggi di errore:</strong> le pagine o documenti conterranno finti file Office, finti link a riunioni dalle principali piattaforme (Meet, Zoom, Teams) e siti noti con presunti errori ed un pulsante da cliccare per risolverli. In maniera simile a quanto avviene per il finto CAPTCHA, al click viene copiato un codice ad insaputa della vittima e contestualmente vengono mostrate delle istruzioni da seguire. Alcune varianti della campagna non contengono il bottone da cliccare ma mostrano direttamente il codice da copiare con le relative istruzioni.</li>
+      </ul>
+
+      <p>Le campagne fino ad ora osservate utilizzavano tre diverse locazioni in cui incollare ed eseguire il codice:</p>
+
+      <ol>
+        <li>finestra Esegui di Windows lanciata mediante la scorciatoia WIN+R</li>
+        <li>barra degli indirizzi di Esplora Risorse, aperto tramite la scorciatoia WIN+E</li>
+        <li>Finestre di terminale, sia CMD che PowerShell, talvolta fatte avviare tramite la scorciatoia WIN+X</li>
+      </ol>
+
+      <p>Per proteggere i propri dispositivi da questa tattica è opportuno adottare una serie di misure preventive atte a bloccare l'attacco, in particolar modo quando sono utilizzati da utenti meno esperti. Ecco alcune delle principali difese:</p>
+
+      <ul>
+        <li><strong>Disabilitare il comando Esegui:</strong> aggiungere alla chiave di registro <code>HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Policies\Explorer</code> un valore DWORD 32-bit con nome “NoRun” ed impostarlo ad 1. Questa modifica blocca le campagne che utilizzano la finestra di Esegui o la barra dell’Esplora Risorse.</li>
+        <li><strong>Disabilitare CMD e PowerShell per l’utente:</strong>
+          <ul>
+            <li>aggiungere alla chiave di registro <code>HKEY_CURRENT_USER\Software\Policies\Microsoft\Windows</code> un valore DWORD 32-bit con nome “DisableCMD” ed impostarlo ad 1.</li>
+            <li>aggiungere alla chiave di registro <code>HKEY_CURRENT_USER\Software\Policies\Microsoft\Windows\PowerShell</code> un valore DWORD 32-bit con nome “DisablePowerShell” ed impostarlo ad 1.</li>
+          </ul>
+        </li>
+        <li><strong>Disabilitare la Clipboard:</strong> creare uno script in PowerShell che venga eseguito in background ad ogni avvio con il seguente codice:
+          <pre>
+while($true){
+  Set-Clipboard -Value "La Clipboard è stata disabilitata su questo dispositivo"
+  sleep 100
+}
+          </pre>
+        </li>
+      </ul>
     </article>
+
   </section>
 
-  <section id="contatti" class="section-box">
-    <h2>Contatti</h2>
-    <form>
-      <label for="nome">Nome</label>
-      <input type="text" id="nome" name="nome" placeholder="Il tuo nome" required />
+  <footer>
+    <p>© 2025 PROVA. Tutti i diritti riservati.</p>
+  </footer>
 
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" placeholder="La tua email" required />
-
-      <label for="messaggio">Messaggio</label>
-      <textarea id="messaggio" name="messaggio" rows="5" placeholder="Scrivi qui il tuo messaggio..." required></textarea>
-
-      <button type="submit">Invia</button>
-    </form>
-  </section>
-</main>
-
-<footer>
-  &copy; 2025 Sicurezza Aziendale - Tutti i diritti riservati
-</footer>
 </body>
 </html>
