--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ footer {
       <p>
         ClickFix è una piattaforma che consente di ottimizzare e digitalizzare i processi di manutenzione, migliorando l’efficienza operativa e riducendo i tempi di intervento. È lo strumento ideale per aziende che vogliono innovare la gestione delle loro risorse.
       </p>
-      <a href="https://www.clickfix.it" target="_blank" rel="noopener noreferrer">Visita il sito ufficiale</a>
+      <a href="githubnotiziaclicfix.html" target="_blank" rel="noopener noreferrer">Leggi di più</a>
     </article>
   </section>
 
