--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ footer {
 </head>
 <body>
 <header>
-  <h1>🛡Proteggi la tua azienda dalle minacce umane</h1>
+  <h1>Quando il copia e incolla diventa un'arma: come difendersi dalla tattica ClickFix</h1>
 </header>
 
 <nav>
@@ -305,11 +305,11 @@ footer {
   <section id="notizie" class="section-box">
     <h2>📰 Notizie dal nostro team</h2>
     <article class="notizia-clickfix">
-      <h3>Quando il copia e incolla diventa un'arma: come difendersi dalla tattica ClickFix</h3>
+      <h3>ClickFix: il software che semplifica la gestione delle manutenzioni</h3>
       <p>
         ClickFix è una piattaforma che consente di ottimizzare e digitalizzare i processi di manutenzione, migliorando l’efficienza operativa e riducendo i tempi di intervento. È lo strumento ideale per aziende che vogliono innovare la gestione delle loro risorse.
       </p>
-      <a href="githubnotiziaclicfix.html" target="_blank" rel="noopener noreferrer">Leggi di più</a>
+      <a href="https://www.clickfix.it" target="_blank" rel="noopener noreferrer">Visita il sito ufficiale</a>
     </article>
   </section>
 
