--- a/index.html
+++ b/index.html
@@ -160,7 +160,6 @@ main {
 }
 
 .notizia-clickfix {
-  /* rimuovo il flex per togliere immagine */
   padding: 0;
   margin-top: 1rem;
 }
@@ -305,11 +304,12 @@ footer {
   <section id="notizie" class="section-box">
     <h2>📰 Notizie dal nostro team</h2>
     <article class="notizia-clickfix">
-      <h3>Quando il copia e incolla diventa un'arma: come difendersi dalla tattica ClickFix</h3>
+      <h3>ClickFix: il software che semplifica la gestione delle manutenzioni</h3>
+      <p><strong>Quando il copia e incolla diventa un'arma: come difendersi dalla tattica ClickFix</strong></p>
       <p>
         ClickFix è una piattaforma che consente di ottimizzare e digitalizzare i processi di manutenzione, migliorando l’efficienza operativa e riducendo i tempi di intervento. È lo strumento ideale per aziende che vogliono innovare la gestione delle loro risorse.
       </p>
-      <a href="https://www.clickfix.it" target="_blank" rel="noopener noreferrer">Visita il sito ufficiale</a>
+      <a href="githubnotiziaclicfix.html" rel="noopener noreferrer">Leggi l'articolo completo</a>
     </article>
   </section>
 
