--- a/index.html
+++ b/index.html
@@ -3,335 +3,221 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>PROVA - Sicurezza e Social Engineering</title>
+<title>PROVA – Sicurezza e Social Engineering</title>
 <style>
-/* --- Stili identici a quelli che hai fornito --- */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  line-height: 1.6;
-  color: #333;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-  min-height: 100vh;
-}
-
-header {
-  background: rgba(255, 255, 255, 0.95);
-  backdrop-filter: blur(10px);
-  padding: 2rem;
-  text-align: center;
-  margin: 2rem;
-  border-radius: 15px;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-}
-
-header h1 {
-  color: #2c3e50;
-  font-size: 2.5rem;
-  font-weight: 700;
-}
-
-header p {
-  color: #555;
-  font-size: 1.2rem;
-  max-width: 600px;
-  margin: 0 auto;
-  margin-top: 1rem;
-  text-align: center;
-  flex-basis: 100%;
-}
-
-nav {
-  background: rgba(255, 255, 255, 0.9);
-  backdrop-filter: blur(10px);
-  margin: 2rem;
-  border-radius: 15px;
-  padding: 1rem;
-  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-}
-
-nav ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 1rem;
-  list-style: none;
-}
-
-nav li a {
-  display: block;
-  padding: 0.8rem 1.5rem;
-  background: linear-gradient(135deg, #667eea, #764ba2);
-  color: white;
-  text-decoration: none;
-  border-radius: 25px;
-  font-weight: 600;
-  transition: all 0.3s ease;
-  box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);
-}
-
-nav li a:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 6px 20px rgba(102, 126, 234, 0.4);
-  background: linear-gradient(135deg, #764ba2, #667eea);
-}
-
-main {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 2rem;
-}
-
-.section-box {
-  background: rgba(255, 255, 255, 0.95);
-  backdrop-filter: blur(10px);
-  margin: 2rem 0;
-  padding: 2.5rem;
-  border-radius: 20px;
-  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  transition: all 0.3s ease;
-  position: relative;
-  overflow: hidden;
-}
-
-.section-box::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 4px;
-  background: linear-gradient(90deg, #667eea, #764ba2);
-  border-radius: 20px 20px 0 0;
-}
-
-.section-box:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
-}
-
-.section-box h2 {
-  color: #2c3e50;
-  font-size: 2rem;
-  margin-bottom: 1.5rem;
-  font-weight: 700;
-  border-bottom: 3px solid #667eea;
-  padding-bottom: 0.5rem;
-  display: inline-block;
-}
-
-.section-box p {
-  color: #555;
-  font-size: 1.1rem;
-  margin-bottom: 1rem;
-  line-height: 1.8;
-}
-
-.section-box ul {
-  list-style: none;
-  padding-left: 0;
-}
-
-.section-box ul li {
-  background: rgba(102, 126, 234, 0.1);
-  margin: 0.8rem 0;
-  padding: 1rem;
-  border-radius: 10px;
-  border-left: 4px solid #667eea;
-  font-size: 1.1rem;
-  transition: all 0.3s ease;
-}
-
-.section-box ul li:hover {
-  background: rgba(102, 126, 234, 0.2);
-  transform: translateX(5px);
-}
-
-.notizia-clickfix {
-  padding: 0;
-  margin-top: 1rem;
-}
-
-.notizia-clickfix h3 {
-  color: #2c3e50;
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-}
-
-.notizia-clickfix a {
-  color: #667eea;
-  text-decoration: none;
-  font-weight: 600;
-  transition: color 0.3s ease;
-}
-
-.notizia-clickfix a:hover {
-  color: #764ba2;
-  text-decoration: underline;
-}
-
-form {
-  display: grid;
-  gap: 1.5rem;
-  max-width: 600px;
-}
-
-form label {
-  font-weight: 600;
-  color: #2c3e50;
-  font-size: 1.1rem;
-}
-
-form input,
-form textarea {
-  padding: 1rem;
-  border: 2px solid rgba(102, 126, 234, 0.3);
-  border-radius: 10px;
-  font-size: 1rem;
-  transition: all 0.3s ease;
-  background: rgba(255, 255, 255, 0.8);
-}
-
-form input:focus,
-form textarea:focus {
-  outline: none;
-  border-color: #667eea;
-  box-shadow: 0 0 10px rgba(102, 126, 234, 0.3);
-  background: white;
-}
-
-form button {
-  padding: 1rem 2rem;
-  background: linear-gradient(135deg, #667eea, #764ba2);
-  color: white;
-  border: none;
-  border-radius: 25px;
-  font-size: 1.1rem;
-  font-weight: 600;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0 5px 15px rgba(102, 126, 234, 0.3);
-}
-
-form button:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 8px 20px rgba(102, 126, 234, 0.4);
-  background: linear-gradient(135deg, #764ba2, #667eea);
-}
-
-footer {
-  background: rgba(44, 62, 80, 0.9);
-  backdrop-filter: blur(10px);
-  color: white;
-  text-align: center;
-  padding: 2rem;
-  margin: 2rem;
-  border-radius: 15px;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-}
-
-@media (max-width: 768px) {
-  header, nav, main, footer {
-    margin: 1rem;
+  /* Reset base */
+  *, *::before, *::after {
+    box-sizing: border-box;
   }
-  
-  header {
-    flex-direction: column;
+  body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #f4f6f8;
+    color: #222;
+    line-height: 1.6;
+  }
+  nav {
+    position: sticky;
+    top: 0;
+    background-color: #002b55;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    padding: 1rem 0;
+    z-index: 1000;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  }
+  nav a {
+    color: #fff;
+    font-weight: 600;
+    text-decoration: none;
+    font-size: 1.1rem;
+    transition: color 0.3s ease;
+  }
+  nav a:hover,
+  nav a:focus {
+    color: #ffa500;
+    outline: none;
   }
 
-  header h1 {
+  .hero {
+    background: linear-gradient(135deg, #667eea, #764ba2);
+    color: #fff;
+    text-align: center;
+    padding: 5rem 1rem 4rem;
+  }
+  .hero h1 {
+    font-size: 2.75rem;
+    margin-bottom: 1rem;
+  }
+  .hero p {
+    font-size: 1.3rem;
+    max-width: 700px;
+    margin: 0 auto 2rem;
+  }
+  .btn {
+    background-color: #ffa500;
+    color: #222;
+    padding: 1rem 2.5rem;
+    border: none;
+    border-radius: 5px;
+    font-weight: 700;
+    font-size: 1.1rem;
+    cursor: pointer;
+    text-decoration: none;
+    display: inline-block;
+    transition: background-color 0.3s ease;
+  }
+  .btn:hover,
+  .btn:focus {
+    background-color: #cc8400;
+    outline: none;
+  }
+
+  main {
+    max-width: 1200px;
+    margin: 4rem auto;
+    padding: 0 1rem;
+  }
+  section {
+    margin-bottom: 4rem;
+  }
+  h2 {
+    text-align: center;
     font-size: 2rem;
+    margin-bottom: 2rem;
+    color: #002b55;
   }
-  
-  nav ul {
-    flex-direction: column;
-    align-items: center;
+
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
+    gap: 2rem;
   }
-  
-  .section-box {
-    padding: 1.5rem;
+  .card {
+    background-color: #fff;
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
-}
+  .card:hover,
+  .card:focus-within {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 30px rgba(0,0,0,0.15);
+  }
+  .card h3 {
+    margin-top: 0;
+    color: #333;
+  }
+  .card p {
+    font-size: 1rem;
+    margin: 1rem 0;
+    color: #555;
+  }
+  .card a.btn {
+    margin-top: 1rem;
+    display: inline-block;
+  }
+
+  #contatti p {
+    text-align: center;
+    font-size: 1.2rem;
+    margin-bottom: 1.5rem;
+  }
+  #contatti .btn {
+    display: block;
+    margin: 0 auto;
+  }
+
+  footer {
+    background-color: #002b55;
+    color: #fff;
+    text-align: center;
+    padding: 2rem 1rem;
+    font-size: 0.9rem;
+  }
+
+  @media (max-width: 600px) {
+    .hero h1 {
+      font-size: 2rem;
+    }
+    .hero p {
+      font-size: 1.1rem;
+    }
+  }
 </style>
 </head>
 <body>
-<header>
-  <h1>🛡Proteggi la tua azienda dalle minacce umane</h1>
-</header>
 
 <nav>
-  <ul>
-    <li><a href="#chi-siamo">Chi siamo</a></li>
-    <li><a href="#servizi">Servizi di Social Engineering</a></li>
-    <li><a href="#notizie">📰 Notizie dal nostro team</a></li>
-    <li><a href="#contatti">Contatti</a></li>
-  </ul>
+  <a href="#chi-siamo">Chi siamo</a>
+  <a href="#servizi">Servizi</a>
+  <a href="#notizie">Notizie</a>
+  <a href="#contatti">Contatti</a>
 </nav>
 
+<section class="hero" role="banner">
+  <h1>Proteggi la tua azienda dal social engineering</h1>
+  <p>Formazione, simulazioni e soluzioni concrete per rendere il tuo team pronto a reagire alle minacce umane.</p>
+  <a href="#contatti" class="btn">Richiedi una demo</a>
+</section>
+
 <main>
-  <section id="chi-siamo" class="section-box">
-    <h2>Social Engineering Concept</h2>
-    <p>
-      Il Social Engineering rappresenta l'arte di manipolare le persone per ottenere informazioni confidenziali o accesso a sistemi protetti. Questa tecnica sfrutta la psicologia umana piuttosto che le vulnerabilità tecniche, rendendola una delle minacce più insidiose nel panorama della cybersecurity.
+  <section id="chi-siamo" tabindex="-1">
+    <h2>Chi siamo</h2>
+    <p style="max-width: 800px; margin: 0 auto; color:#444; font-size:1.1rem; text-align:center;">
+      Il Social Engineering è l'arte di manipolare le persone per ottenere informazioni riservate o accesso a sistemi protetti. È una minaccia in crescita nel mondo della cybersecurity, che si basa sulla psicologia umana piuttosto che sulle falle tecnologiche.
     </p>
-    <p>
-      Gli attaccanti utilizzano tecniche sofisticate come la creazione di falsa fiducia, l'urgenza artificiale, l'autorità simulata e la paura per spingere le vittime a compiere azioni che compromettono la sicurezza aziendale. La formazione e la consapevolezza sono le difese più efficaci contro queste minacce.
+    <p style="max-width: 800px; margin: 1rem auto 0; color:#444; font-size:1.1rem; text-align:center;">
+      Attraverso tecniche come la creazione di falsa fiducia, l'urgenza artificiale e l'autorità simulata, gli attaccanti compromettono la sicurezza aziendale. La consapevolezza e la formazione sono le chiavi per difendersi efficacemente.
     </p>
   </section>
 
-  <section id="servizi" class="section-box">
-    <h2>Servizi di Social Engineering</h2>
-    <ul>
-      <li>Audit di sicurezza umana</li>
-      <li>Formazione personalizzata per il personale</li>
-      <li>Simulazioni di attacchi reali</li>
-      <li>Consulenza sulla prevenzione e mitigazione</li>
-    </ul>
+  <section id="servizi">
+    <h2>I nostri servizi</h2>
+    <div class="cards" role="list">
+      <article class="card" role="listitem" tabindex="0">
+        <h3>Audit di sicurezza umana</h3>
+        <p>Analisi approfondite per identificare le vulnerabilità legate al comportamento del personale.</p>
+      </article>
+      <article class="card" role="listitem" tabindex="0">
+        <h3>Formazione personalizzata</h3>
+        <p>Corsi su misura per il tuo team, per riconoscere e prevenire tentativi di social engineering.</p>
+      </article>
+      <article class="card" role="listitem" tabindex="0">
+        <h3>Simulazioni di attacchi reali</h3>
+        <p>Test pratici e scenari realistici per mettere alla prova la resilienza della tua organizzazione.</p>
+      </article>
+      <article class="card" role="listitem" tabindex="0">
+        <h3>Consulenza preventiva</h3>
+        <p>Strategie e supporto continuo per mitigare i rischi e rafforzare le difese umane.</p>
+      </article>
+    </div>
   </section>
 
-  <section id="notizie" class="section-box">
-    <h2>📰 Notizie dal nostro team</h2>
-    <article class="notizia-clickfix">
-      <h3>ClickFix: il software che semplifica la gestione delle manutenzioni</h3>
-      <p><strong>Quando il copia e incolla diventa un'arma: come difendersi dalla tattica ClickFix</strong></p>
-      <p>
-        ClickFix è una piattaforma che consente di ottimizzare e digitalizzare i processi di manutenzione, migliorando l’efficienza operativa e riducendo i tempi di intervento. È lo strumento ideale per aziende che vogliono innovare la gestione delle loro risorse.
-      </p>
-      <a href="githubnotiziaclicfix.html" rel="noopener noreferrer">Leggi l'articolo completo</a>
-    </article>
+  <section id="notizie">
+    <h2>Notizie & approfondimenti</h2>
+    <div class="cards" role="list">
+      <article class="card" role="listitem" tabindex="0">
+        <h3>Quando il copia e incolla diventa un’arma: ClickFix</h3>
+        <p>ClickFix è una piattaforma che ottimizza la gestione delle manutenzioni, ma può essere usata come tattica di social engineering. Scopri come difenderti.</p>
+        <a href="githubnotiziaclicfix.html" class="btn" aria-label="Leggi l'articolo completo su ClickFix">Leggi l’articolo completo</a>
+      </article>
+    </div>
   </section>
 
-  <section id="contatti" class="section-box">
+  <section id="contatti" tabindex="-1">
     <h2>Contatti</h2>
-    <form>
-      <label for="nome">Nome</label>
-      <input type="text" id="nome" name="nome" placeholder="Il tuo nome" required />
-
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" placeholder="La tua email" required />
-
-      <label for="messaggio">Messaggio</label>
-      <textarea id="messaggio" name="messaggio" rows="5" placeholder="Scrivi qui il tuo messaggio..." required></textarea>
-
-      <button type="submit">Invia</button>
-    </form>
+    <p>Scrivici per scoprire come possiamo aiutarti a proteggere il tuo team dalle minacce umane.</p>
+    <a href="mailto:info@prova.it" class="btn" aria-label="Scrivi una mail a info@prova.it">Scrivici ora</a>
   </section>
 </main>
 
 <footer>
-  &copy; 2025 Sicurezza Aziendale - Tutti i diritti riservati
+  <p>&copy; 2025 PROVA. Tutti i diritti riservati.</p>
 </footer>
+
 </body>
 </html>
