--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     background-color: #002b55;
     display: flex;
     justify-content: center;
-    gap: 2rem;
-    padding: 1rem 0;
+    gap: 1rem; /* più raccolto */
+    padding: 0.5rem 0; /* meno spazio verticale */
     z-index: 1000;
     box-shadow: 0 2px 6px rgba(0,0,0,0.2);
   }
@@ -32,7 +32,7 @@
     color: #fff;
     font-weight: 600;
     text-decoration: none;
-    font-size: 1.1rem;
+    font-size: 1rem; /* leggermente più piccolo */
     transition: color 0.3s ease;
   }
   nav a:hover,
