--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <div class="cards" role="list">
       <article class="card" role="listitem" tabindex="0">
         <h3>Quando il copia e incolla diventa un’arma: ClickFix</h3>
-        <p>ClickFix è una piattaforma che ottimizza la gestione delle manutenzioni, ma può essere usata come tattica di social engineering. Scopri come difenderti.</p>
+        <p>Il post illustra ClickFix, la recente tattica di Social Engineering diffusa nell’arco del 2024, con un focus su tutte le varianti osservate nelle campagne che ne facevano uso e le potenziali tecniche di difesa da mettere in atto per proteggere i dispositivi utilizzati da utenti meno esperti.</p>
         <a href="githubnotiziaclicfix.html" class="btn" aria-label="Leggi l'articolo completo su ClickFix">Leggi l’articolo completo</a>
       </article>
     </div>
